tests/miniJava/neg/000236_mutation.MiniJava
class java { public static void java ( String [ ] java ) { { } } }
